--- a/frontend/style.css
+++ b/frontend/style.css
@@ -11,10 +11,60 @@ body {
   }
 
   h1 {
-    font-size: 5rem;
+    font-family: 'roboto', sans-serif;
+    font-size: 2rem;
   }
 
   p {
     font-size: 1.5rem;
     opacity: 0.7;
+  }
+  .guage{
+    width: 100%;
+    max-width: 250px;
+  }
+  .guage_body{
+    width: 100%;
+    height: 0;
+    padding-bottom: 50%;
+    background: linear-gradient(
+      to right,
+    red 0%,
+    red 40%,
+    yellow 55%,
+    yellow 80%,
+    green 85%);
+    position: relative;
+    border-top-left-radius: 100% 200%;
+    border-top-right-radius: 100% 200%;
+    overflow: hidden;
+  }
+  .guage_fill{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: inherit;
+    height: 100%;
+    background: white;
+    transform-origin: center top;
+    transform: rotate(0turn);
+    transition: transform 0.2s ease-out;
+  }
+  .guage_cover{
+    width: 75%;
+    height: 150%;
+    background: black;
+    border-radius: 50%;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+
+    /* Text */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 25%;
+  box-sizing: border-box;
+
   }
