--- a/frontend/style.css
+++ b/frontend/style.css
@@ -222,7 +222,7 @@ main {
     visibility: visible;
   }
 
-  .layout.collapsed::before {
+  .layout:not(collapsed)::before {
     content: "";
     position: fixed;
     inset: 0;
